--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi
-uvicorn
-python-dotenv
-openai
-httpx
-pydantic
+fastapi==0.115.6
+uvicorn==0.32.1
+python-dotenv==1.0.1
+openai==1.59.5
+httpx==0.28.1
+pydantic==2.10.4
