--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,13 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "backend/app/main.py",
-            "use": "@vercel/python"
-        }
+    "buildCommand": "cd frontend && npm install && npm run build",
+    "outputDirectory": "frontend/.next",
+    "devCommand": "cd frontend && npm run dev",
+    "installCommand": "cd frontend && npm install",
+    "framework": "nextjs",
+    "regions": [
+        "iad1"
     ],
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "backend/app/main.py"
-        }
-    ]
+    "env": {
+        "NEXT_PUBLIC_API_URL": "/api"
+    }
 }
