--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,6 @@
 {
-    "buildCommand": "cd frontend && npm install && npm run build",
-    "outputDirectory": "frontend/.next",
-    "devCommand": "cd frontend && npm run dev",
-    "installCommand": "cd frontend && npm install",
-    "framework": "nextjs",
-    "regions": [
-        "iad1"
-    ],
-    "env": {
-        "NEXT_PUBLIC_API_URL": "/api"
-    }
+    "buildCommand": "npm run build",
+    "outputDirectory": ".next",
+    "devCommand": "npm run dev",
+    "installCommand": "npm install"
 }
