--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Build artifacts
+frontend_bundle.zip
+backend_bundle.zip
+out/
+
+# Virtual environment
+venv/
