--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,9 +8,14 @@
     "theme_color": "#8b5cf6",
     "icons": [
         {
-            "src": "/favicon.ico",
-            "sizes": "any",
-            "type": "image/x-icon"
+            "src": "/logo.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/logo.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
