feat: prepare for Vercel deployment and remove cPanel dependencies

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     ],
     "builds": [
         {
-            "src": "backend/app/main.py",
+            "src": "api/index.py",
             "use": "@vercel/python"
         },
         {
@@ -18,7 +18,7 @@
     "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "backend/app/main.py"
+            "dest": "api/index.py"
         }
     ]
 }
