feat: Globalize app, add dynamic currency, Google Ads, and fix routing

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Weekend Travellers",
     "short_name": "Weekend Travellers",
-    "description": "AI-Powered Weekend Trip Planner for India",
+    "description": "AI-Powered Weekend Trip Planner",
     "start_url": "/",
     "display": "standalone",
     "background_color": "#000000",
